--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,12 +1,20 @@
 <div class="well hoverwell thumbnail">
-  <h2>{{ event.name }}</h2>
-  <div>Date: {{ event.date }}</div>
-  <div>Time: {{ event.time }}</div>
-  <div>Price: {{ event.price | currency }}</div>
-  <div>
-    <span>Location: {{ event.location.address }}</span>
+  <h2>{{ event?.name }}</h2>
+  <div>Date: {{ event?.date }}</div>
+
+  <div [ngSwitch]="event?.time">
+    Time: {{ event?.time }}
+    <span *ngSwitchCase="'8:00 am'"> (Early Start) </span>
+    <span *ngSwitchCase="'10:00 am'"> (Late Start) </span>
+    <span *ngSwitchDefault> (Normal Start) </span>
+  </div>
+
+  <div>Price: {{ event?.price | currency }}</div>
+  <div *ngIf="event?.location">
+    <span>Location: {{ event?.location?.address }}</span>
     <span class="pad-left"
-      >{{ event.location.city }}, {{ event.location.country }}</span
+      >{{ event?.location?.city }}, {{ event?.location?.country }}</span
     >
   </div>
+  <div *ngIf="event?.onlineUrl">Online Url: {{ event.onlineUrl }}</div>
 </div>
