--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -1,5 +1,10 @@
 <div>
   <h1>Angular Upcoming Events</h1>
   <hr />
-  <ems-event-thumbnail [event]="event"></ems-event-thumbnail>
+
+  <div class="row">
+    <div class="col-md-5" *ngFor="let event of events">
+      <ems-event-thumbnail [event]="event"></ems-event-thumbnail>
+    </div>
+  </div>
 </div>
