--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -2,7 +2,7 @@
   <h2>{{ event?.name }}</h2>
   <div>Date: {{ event?.date }}</div>
 
-  <div [ngSwitch]="event?.time">
+  <div [ngSwitch]="event?.time" [ngClass]="getTimeClasses()">
     Time: {{ event?.time }}
     <span *ngSwitchCase="'8:00 am'"> (Early Start) </span>
     <span *ngSwitchCase="'10:00 am'"> (Late Start) </span>
