--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -42,7 +42,7 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a>Welcome Nation</a>
+            <a [routerLink]="['/users/profile']">Welcome Nation</a>
           </li>
         </ul>
       </div>
