--- a/src/app/users/login.component.html
+++ b/src/app/users/login.component.html
@@ -5,16 +5,17 @@
     autocomplete="off"
     #loginForm="ngForm"
     (ngSubmit)="login(loginForm.value)"
+    novalidate
   >
     <div class="form-group">
       <label for="userName">User Name:</label>
       <input
-        [(ngModel)]="userName"
+        (ngModel)="(userName)"
         name="userName"
         id="userName"
         type="text"
         class="form-control"
-        placeholder="User Name..."
+        required
       />
     </div>
     <div class="form-group">
@@ -25,11 +26,13 @@
         id="password"
         type="password"
         class="form-control"
-        placeholder="Password..."
+        required
       />
     </div>
 
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary" [disabled]="loginForm.valid">
+      Login
+    </button>
     <button type="button" class="btn btn-default" (click)="cancel()">
       Cancel
     </button>
