--- a/src/app/users/profile.component.html
+++ b/src/app/users/profile.component.html
@@ -1,11 +1,48 @@
-<h1>Create New Event</h1>
-<hr />
-<div class="cold-md-6">
-  <h3>create event form will go here</h3>
-  <br />
-  <br />
-  <button type="submit" class="btn btn-primary">Save</button>
-  <button type="button" class="btn btn-default">
-    Cancel
-  </button>
+<div>
+  <h1>Edit Your Profile</h1>
+  <hr />
+  <div class="col-md-4">
+    <form
+      autocomplete="off"
+      novalidate
+      [formGroup]="profileForm"
+      (ngSubmit)="onSubmit(profileForm.value)"
+    >
+      <div
+        class="form-group"
+        [ngClass]="{
+          error: !validateFirstName()
+        }"
+      >
+        <label for="firstName">First Name:</label>
+        <em *ngIf="!validateFirstName()">Required</em>
+        <input
+          id="firstName"
+          type="text"
+          class="form-control"
+          formControlName="firstName"
+        />
+      </div>
+      <div
+        class="form-group"
+        [ngClass]="{
+          error: !validateLastName()
+        }"
+      >
+        <label for="lastName">Last Name:</label>
+        <em *ngIf="!validateLastName()">Required</em>
+        <input
+          id="lastName"
+          type="text"
+          class="form-control"
+          formControlName="lastName"
+        />
+      </div>
+
+      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="button" class="btn btn-default" (click)="cancel()">
+        Cancel
+      </button>
+    </form>
+  </div>
 </div>
