--- a/src/app/users/profile.component.html
+++ b/src/app/users/profile.component.html
@@ -15,7 +15,20 @@
         }"
       >
         <label for="firstName">First Name:</label>
-        <em *ngIf="!validateFirstName()">Required</em>
+        <em
+          *ngIf="
+            !validateFirstName() &&
+            profileForm.controls.firstName.errors?.required
+          "
+          >Required
+        </em>
+        <em
+          *ngIf="
+            !validateFirstName() &&
+            profileForm.controls.firstName.errors?.pattern
+          "
+          >Name must start with a letter
+        </em>
         <input
           id="firstName"
           type="text"
