--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -21,4 +21,6 @@
       </address>
     </div>
   </div>
+  <hr />
+  <ems-event-sessions [sessions]="event?.sessions"></ems-event-sessions>
 </div>
