--- a/src/app/events/event-details/create-session.component.html
+++ b/src/app/events/event-details/create-session.component.html
@@ -112,6 +112,12 @@
       ></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" class="btn btn-default">Cancel</button>
+    <button
+      type="button"
+      class="btn btn-default"
+      (click)="onCancelAddSession()"
+    >
+      Cancel
+    </button>
   </form>
 </div>
